--- a/selfdrive/car/torque_data/substitute.toml
+++ b/selfdrive/car/torque_data/substitute.toml
@@ -4,7 +4,7 @@ legend = ["LAT_ACCEL_FACTOR", "MAX_LAT_ACCEL_MEASURED", "FRICTION"]
 "MAZDA CX-5" = "MAZDA CX-9 2021"
 "MAZDA CX-5 2022" = "MAZDA CX-9 2021"
 "MAZDA CX-9" = "MAZDA CX-9 2021"
-
+"FORD EXPLORER 2020" = "FORD EXPLORER 2020",
 "DODGE DURANGO 2021" = "CHRYSLER PACIFICA 2020"
 
 "TOYOTA ALPHARD 2020" = "TOYOTA SIENNA 2018"
